--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/eslint-config",
+  "name": "@my8m/eslint-config",
   "version": "0.0.0",
   "type": "module",
   "private": true,
