--- a/apps/api-server/package.json
+++ b/apps/api-server/package.json
@@ -11,9 +11,11 @@
     "dependencies": {
         "@my8m/core": "*",
         "@my8m/database": "*",
-        "express": "^4.21.0",
+        "@types/jsonwebtoken": "^9.0.10",
+        "bullmq": "^5.0.0",
         "cors": "^2.8.5",
-        "bullmq": "^5.0.0"
+        "express": "^4.21.0",
+        "jsonwebtoken": "^9.0.3"
     },
     "devDependencies": {
         "@my8m/typescript-config": "*",
